fully finished LadyNagant and Saske